# LPAF

./: .gitignore  CMakeLists.txt  GGFW.sln  LICENSE  LPAF.sln  readme.md
Doc/: Usage.md
Documentation/: readme.md
Documentation/Guides/: Getting_Started.md
Documentation/Internal/: WIN32_EC_macro.md
Framework/: CMakeLists.txt  Documentation.md  Errors.hpp  Exposed-Globals.hpp  Framework.cpp  Framework.hpp  Framework.vcxproj  Framework.vcxproj.filters  Internal-Globals.hpp  Internals.cpp  Internals.hpp  OS_Win32.cpp  Reference.md  Usage.md  Usage_Doc.md  Vulkan.cpp  Vulkan.hpp  Win32.cpp  int_doc.md  usr_doc.md
Framework/internals/: Modules.cpp  Modules.hpp
Game/: Game.vcxproj  Game.vcxproj.filters  Last_Error.txt  Last_Log.txt  Main.cpp  Resource.rc  resource.h
Game/shader/: basic.vert  compile.bat
Tests/: CMakeLists.txt  Main.cpp  resource.h
Tests/res/: cursor.cur  res.rc
Tests/shader/: basic.vert.spv
framework/: CMakeLists.txt  framework-linux.c  framework.c  framework.h  internal-linux.c  internal.c  internal.h  linux.c  linux.h  win32.c  win32.h  window.c  window.h
tests/: CMakeLists.txt  main.c  tests.c  tests.h
